<?xml version="1.0"?>
<package format="2">
  <name>sts_qr_locator</name>
  <version>0.0.0</version>
  <description>Uses a Lida and a Camera to calculate the Position in reference to the Lidar of a QR-Code</description>
  <maintainer email="sandro.steinhuber@yahoo.de">vm</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamics_qr_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>dynamics_qr_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>dynamics_qr_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
